# SVD_image_compression

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: compress_image.py
svd_image_compression/: __init__.py  image_compression.py
